--- a/flor/index.html
+++ b/flor/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="icon" href="img/flowers.png" type="image/x-icon" />
+    <link rel="icon" href="https://pics.clipartpng.com/midle/Tropical_Flower_PNG_Clipart-194.png" type="image/x-icon" />
     <title>Flores:D</title>
   </head>
   <body class="container">
