--- a/flor/index.html
+++ b/flor/index.html
@@ -9,7 +9,7 @@
     <title>Flores:D</title>
   </head>
   <body class="container">
-    <audio src="FlowerN/flor/ChristianBasso&HaienQiu-Flowers.mp3" autoplay></audio>
+    <audio src="ChristianBasso&HaienQiu-Flowers.mp3" autoplay></audio>
     <div id="lyrics">
       
     </div>
